//package rest;
//
//import com.google.gson.Gson;
//import com.google.gson.GsonBuilder;
//import datafacades.IDataFacade;
//import dtofacades.PersonDTOFacade;
//import dtos.PersonDTO;
//
//import javax.ws.rs.Path;
//
//@Path("person")
//public class PersonResource {
//
//    private static final IDataFacade<PersonDTO> FACADE =  PersonDTOFacade.getFacade();
//    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
